--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.15",
+    "openmeteo": "^1.1.4",
     "prettyweather": "file:",
     "react": "^18",
     "react-dom": "^18"
