--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jest": "^29.7.0",
     "next": "14.2.15",
     "openmeteo": "^1.1.4",
     "prettyweather": "file:",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
